# cse-rag-intelligence

./: .env.prod.example  LICENSE  PRODUCTION.md  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  gitignore
backend/: Dockerfile  README.md  catalog_api.py  frontend_api.py  pyproject.toml  rag_service.py
data/: CompanyList.example.csv
evaluation/: README.md  eval_harness.py  eval_set.json
frontend/: .env.local.example  Dockerfile  README.md  next.config.js  package.json
frontend/app/: globals.css  layout.jsx  page.jsx
frontend/app/ask/: page.jsx
frontend/app/catalog/: page.jsx
frontend/app/companies/: page.jsx
frontend/app/company/[symbol]/: page.jsx
frontend/components/: AskInterface.jsx  CatalogCompanyPicker.jsx  CatalogControls.jsx  CompanyBrowser.jsx  CoverageGrid.jsx  Masthead.jsx
frontend/lib/: api.js
ingestion/: Dockerfile.worker  README.md  cse_client.py  discover.py  infra.py  jobqueue.py  load_companies.py  pipeline.py  schema.sql  worker.py
reranker/: Dockerfile  README.md  reranker_service.py
scripts/: README.md  chunk_enrich.py  extract_all_docling.py  extract_safe_docling.py  index_chunks.py  ingest.py  parse_test.py  parse_test_docling.py  search_test.py
